# SimpleCommKit

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
SimpleCommKitAi/SimpleCommKitAiBle/: README.md  pyproject.toml
SimpleCommKitAi/SimpleCommKitAiBle/skills/SimpleCommKitAiBle/: SKILL.md
SimpleCommKitAi/SimpleCommKitAiBle/src/SimpleCommKitAiBle/: __init__.py  http.py  mcp.py
SimpleCommKitAi/SimpleCommKitAiBle/tests/: __init__.py  conftest.py  requirements-test.txt  run_smoke.py  test_http_api.py  test_import.py  test_mcp.py
SimpleCommKitAi/SimpleCommKitAiBleFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiBleFastmcpp/skills/SimpleCommKitAiBleFastmcpp/: SKILL.md
SimpleCommKitAi/SimpleCommKitAiBleFastmcpp/src/: ble_state.cpp  ble_state.hpp  ble_tools.cpp  ble_tools.hpp  main.cpp
SimpleCommKitAi/SimpleCommKitAiBleFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiHid/: README.md  pyproject.toml
SimpleCommKitAi/SimpleCommKitAiHid/skills/SimpleCommKitAiHid/: SKILL.md
SimpleCommKitAi/SimpleCommKitAiHid/src/SimpleCommKitAiHid/: mcp.py  (+2 more)
SimpleCommKitAi/SimpleCommKitAiHid/tests/: __init__.py  conftest.py  requirements-test.txt  test_import.py  test_mcp.py
SimpleCommKitAi/SimpleCommKitAiHidFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiHidFastmcpp/src/: hid_state.cpp  hid_state.hpp  hid_tools.cpp  hid_tools.hpp  main.cpp
SimpleCommKitAi/SimpleCommKitAiHidFastmcpp/tests/: CMakeLists.txt  test_hid_state.cpp  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiMqttClient/: README.md  pyproject.toml
SimpleCommKitAi/SimpleCommKitAiMqttClientFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiMqttClientFastmcpp/src/: main.cpp  mqtt_state.cpp  mqtt_state.hpp  mqtt_tools.cpp  mqtt_tools.hpp
SimpleCommKitAi/SimpleCommKitAiMqttClientFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiSerialPort/: README.md  pyproject.toml
SimpleCommKitAi/SimpleCommKitAiSerialPort/tests/: __init__.py  conftest.py  requirements-test.txt  test_import.py
SimpleCommKitAi/SimpleCommKitAiSerialPortFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiSerialPortFastmcpp/src/: main.cpp  serial_state.cpp  serial_state.hpp  serial_tools.cpp  serial_tools.hpp
SimpleCommKitAi/SimpleCommKitAiSerialPortFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiTcpClient/: README.md  pyproject.toml
SimpleCommKitAi/SimpleCommKitAiTcpClientFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiTcpClientFastmcpp/src/: main.cpp  tcp_state.cpp  tcp_state.hpp  tcp_tools.cpp  tcp_tools.hpp
SimpleCommKitAi/SimpleCommKitAiTcpClientFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiTcpServer/: README.md  pyproject.toml
SimpleCommKitAi/SimpleCommKitAiTcpServerFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiTcpServerFastmcpp/src/: main.cpp  tcp_server_state.cpp  tcp_server_state.hpp  tcp_server_tools.cpp  tcp_server_tools.hpp
SimpleCommKitAi/SimpleCommKitAiTcpServerFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiUdpClient/: README.md  pyproject.toml
SimpleCommKitAi/SimpleCommKitAiUdpClientFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiUdpClientFastmcpp/src/: main.cpp  udp_state.cpp  udp_state.hpp  udp_tools.cpp  udp_tools.hpp
SimpleCommKitAi/SimpleCommKitAiUdpClientFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiUdpServerFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiUdpServerFastmcpp/src/: main.cpp  udp_server_state.cpp  udp_server_state.hpp  udp_server_tools.cpp  udp_server_tools.hpp
SimpleCommKitAi/SimpleCommKitAiUdpServerFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiUsb/: README.md  pyproject.toml
SimpleCommKitAi/SimpleCommKitAiUsb/tests/: __init__.py  conftest.py  requirements-test.txt  test_import.py  test_mcp.py
SimpleCommKitAi/SimpleCommKitAiUsbFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiUsbFastmcpp/src/: main.cpp  usb_state.cpp  usb_state.hpp  usb_tools.cpp  usb_tools.hpp
SimpleCommKitAi/SimpleCommKitAiUsbFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiWebSocketClientFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiWebSocketClientFastmcpp/src/: main.cpp  ws_state.cpp  ws_state.hpp  ws_tools.cpp  ws_tools.hpp
SimpleCommKitAi/SimpleCommKitAiWebSocketClientFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
SimpleCommKitAi/SimpleCommKitAiWebSocketServerFastmcpp/: CMakeLists.txt  README.md
SimpleCommKitAi/SimpleCommKitAiWebSocketServerFastmcpp/src/: main.cpp  ws_server_state.cpp  ws_server_state.hpp  ws_server_tools.cpp  ws_server_tools.hpp
SimpleCommKitAi/SimpleCommKitAiWebSocketServerFastmcpp/tests/: CMakeLists.txt  test_utility.cpp
buildscripts/mongoose/: CMakeLists.txt
buildscripts/uSockets/: CMakeLists.txt
buildscripts/uWebSockets_Interface/: CMakeLists.txt
src/SimpleCommKitBle/: CMakeLists.txt  SimpleCommKitBleCentral.h
src/SimpleCommKitBle/src/: SimpleCommKitBleCentral.cpp  SimpleCommKitBleCentral_p.cpp  SimpleCommKitBleCentral_p.h
src/SimpleCommKitHid/: CMakeLists.txt  SimpleCommKitHid.h
src/SimpleCommKitHid/src/: SimpleCommKitHid.cpp  SimpleCommKitHid_p.cpp  SimpleCommKitHid_p.h
src/SimpleCommKitMqttClient/: CMakeLists.txt  SimpleCommKitMqttClient.h
src/SimpleCommKitMqttClient/src/: SimpleCommKitMqttClient.cpp  SimpleCommKitMqttClient_p.cpp  SimpleCommKitMqttClient_p.h
src/SimpleCommKitPyBle/: CMakeLists.txt  pyproject.toml
src/SimpleCommKitPyBle/src/: main.cpp
src/SimpleCommKitPyHid/: CMakeLists.txt  pyproject.toml
src/SimpleCommKitPyHid/src/: main.cpp
src/SimpleCommKitPyMqttClient/: CMakeLists.txt  pyproject.toml  requirements.txt
src/SimpleCommKitPyMqttClient/src/: main.cpp
src/SimpleCommKitPySerialPort/: CMakeLists.txt  pyproject.toml
src/SimpleCommKitPySerialPort/src/: main.cpp
(+195 files in other folders)
