[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleCommKitAiBle"
version = "0.1.0"
description = "SimpleCommKitAiBle - AI-friendly BLE toolkit (MCP server & REST API) powered by SimpleCommKitPyBle."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "SimpleCommKit Team" }]
urls = { Homepage = "https://github.com/catgrayprj/SimpleCommKit" }
keywords = ["ble", "bluetooth", "mcp", "ai", "simplecommkit"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    # SimpleCommKitPyBle must be built from source (SimpleCommKitPyBle)
    # "SimpleCommKitPyBle",
    "fastmcp",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "httpx",
]

[project.scripts]
simplecommkitaible-mcp = "SimpleCommKitAiBle.mcp:main"
simplecommkitaible-http = "SimpleCommKitAiBle.http:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
