[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "SimpleCommKitAiHid"
dynamic = ["version"]
description = "SimpleCommKitAiHid - AI-friendly HID toolkit (MCP server & REST API) powered by SimpleCommKitPyHid."
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "SimpleCommKit Team" }]
urls = { Homepage = "https://github.com/catgrayprj/SimpleCommKit" }
keywords = ["hid", "usb", "mcp", "ai", "simplecommkit"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    # SimpleCommKitPyHid must be built from source (SimpleCommKitPyHid)
    # "SimpleCommKitPyHid",
    "fastmcp",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "httpx",
]

[project.scripts]
simplecommkitaihid-mcp = "SimpleCommKitAiHid.mcp:main"
simplecommkitaihid-http = "SimpleCommKitAiHid.http:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.setuptools.dynamic]
version = {file = "../../VERSION"}
